hphp/hack/test/typecheck/case_type/recursive/non_termination_bug_inter2.php.exp
ERROR: File "non_termination_bug_inter2.php", line 4, characters 11-13:
Cyclic type definition (Typing[4014])
  File "non_termination_bug_inter2.php", line 5, characters 23-28:
  Cyclic use is here
ERROR: File "non_termination_bug_inter2.php", line 10, characters 13-22:
Invalid `is` expression hint (Typing[4195])
  File "non_termination_bug_inter2.php", line 10, characters 13-22:
  The `is` operator cannot be used with a type with generics, because generics are erased at runtime
