hphp/hack/test/typecheck/case_type/recursive/non_termination_bug_inter2.php
<?hh
<<file:__EnableUnstableFeatures('case_types', 'recursive_case_types')>>

case type Lst<T> = Cons<T> | null;
type Cons<T> = (null, Lst<T>);

function discriminate(
  Lst<int> $l,
): void {
  if ($l is Cons<null>) {}
}
